# swarmclaw_sub_agent

./: ASYNC_TASK_EXAMPLES.md  CMakeLists.txt  README.md  esp_sensor.html  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: main.yml
camera_example/: .gitignore  LICENSE  README.md
main/: CMakeLists.txt  config.h  idf_component.yml  main.c  secrets.h.example  swarm.c
main/a2a/: a2a_rpc.c  a2a_rpc.h  task_manager.c  task_manager.h  task_store.c  task_store.h
main/a2a_http/: a2a_http.c  a2a_http.h
main/ble/: bthome_listener.c  bthome_listener.h
main/camera_core/: camera_config.h  camera_core.c  camera_core.h  config.h
main/camera_http/: camera_http.c
main/cli/: serial_cli.c  serial_cli.h
main/llm/: llm_chat.c  llm_chat.h
main/tools/: a2a_tools.c  a2a_tools.h
main/wifi_sta/: wifi_sta.c  wifi_sta.h
